; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/nouveau/nvkm/subdev/bios/extr_M0205.c_nvbios_M0205Sp.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/nouveau/nvkm/subdev/bios/extr_M0205.c_nvbios_M0205Sp.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nvkm_bios = type { i32 }
%struct.nvbios_M0205S = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @nvbios_M0205Sp(%struct.nvkm_bios* %0, i32 %1, i32 %2, i32* %3, i32* %4, %struct.nvbios_M0205S* %5) #0 {
  %7 = alloca i32, align 4
  %8 = alloca %struct.nvkm_bios*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32*, align 8
  %12 = alloca i32*, align 8
  %13 = alloca %struct.nvbios_M0205S*, align 8
  %14 = alloca i32, align 4
  store %struct.nvkm_bios* %0, %struct.nvkm_bios** %8, align 8
  store i32 %1, i32* %9, align 4
  store i32 %2, i32* %10, align 4
  store i32* %3, i32** %11, align 8
  store i32* %4, i32** %12, align 8
  store %struct.nvbios_M0205S* %5, %struct.nvbios_M0205S** %13, align 8
  %15 = load %struct.nvkm_bios*, %struct.nvkm_bios** %8, align 8
  %16 = load i32, i32* %9, align 4
  %17 = load i32, i32* %10, align 4
  %18 = load i32*, i32** %11, align 8
  %19 = load i32*, i32** %12, align 8
  %20 = call i32 @nvbios_M0205Se(%struct.nvkm_bios* %15, i32 %16, i32 %17, i32* %18, i32* %19)
  store i32 %20, i32* %14, align 4
  %21 = load %struct.nvbios_M0205S*, %struct.nvbios_M0205S** %13, align 8
  %22 = call i32 @memset(%struct.nvbios_M0205S* %21, i32 0, i32 4)
  %23 = load i32, i32* %14, align 4
  %24 = icmp ne i32 %23, 0
  %25 = xor i1 %24, true
  %26 = xor i1 %25, true
  %27 = zext i1 %26 to i32
  %28 = load i32*, i32** %11, align 8
  %29 = load i32, i32* %28, align 4
  %30 = mul nsw i32 %27, %29
  switch i32 %30, label %39 [
    i32 16, label %31
  ]

31:                                               ; preds = %6
  %32 = load %struct.nvkm_bios*, %struct.nvkm_bios** %8, align 8
  %33 = load i32, i32* %14, align 4
  %34 = add nsw i32 %33, 0
  %35 = call i32 @nvbios_rd08(%struct.nvkm_bios* %32, i32 %34)
  %36 = load %struct.nvbios_M0205S*, %struct.nvbios_M0205S** %13, align 8
  %37 = getelementptr inbounds %struct.nvbios_M0205S, %struct.nvbios_M0205S* %36, i32 0, i32 0
  store i32 %35, i32* %37, align 4
  %38 = load i32, i32* %14, align 4
  store i32 %38, i32* %7, align 4
  br label %41

39:                                               ; preds = %6
  br label %40

40:                                               ; preds = %39
  store i32 0, i32* %7, align 4
  br label %41

41:                                               ; preds = %40, %31
  %42 = load i32, i32* %7, align 4
  ret i32 %42
}

declare dso_local i32 @nvbios_M0205Se(%struct.nvkm_bios*, i32, i32, i32*, i32*) #1

declare dso_local i32 @memset(%struct.nvbios_M0205S*, i32, i32) #1

declare dso_local i32 @nvbios_rd08(%struct.nvkm_bios*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
